# puls

./: CHANGELOG.md  Cargo.toml  README.md  puls.desktop  verify_lang
.github/: FUNDING.yml
debian/: changelog  control  copyright  rules
src/: config.rs  error_logger.rs  language.rs  main.rs  system_service.rs  types.rs  utils.rs
src/monitors/: container_monitor.rs  gpu_monitor.rs  mod.rs  system_monitor.rs
src/ui/: colors.rs  layouts.rs  mod.rs  widgets.rs
