[package]
name = "puls"
version = "0.3.0"
edition = "2021"
authors = ["PULS Contributors"]
description = "A comprehensive system monitoring tool with TUI"
license = "GPL-3.0"
repository = "https://github.com/word-sys/puls"

[[bin]]
name = "puls"
path = "src/main.rs"

[dependencies]
# Core system monitoring
sysinfo = "0.30"
users = "0.11"

# Docker/Container support
bollard = { version = "0.17", optional = true }

# GPU monitoring
nvml-wrapper = { version = "0.10", optional = true }
# AMD GPU support (placeholder for future implementation)
# libdrm-sys = { version = "0.4", optional = true }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Performance and data structures
dashmap = "6.0"
parking_lot = "0.12"

# Additional utilities
atty = "0.2"
env_logger = "0.11"
log = "0.4"
signal-hook = "0.3"

[features]
default = ["docker", "nvidia-gpu"]
docker = ["dep:bollard"]
nvidia-gpu = ["dep:nvml-wrapper"]
# amd-gpu = ["dep:libdrm-sys"] # Future feature
full = ["docker", "nvidia-gpu"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true