[package]
name = "puls"
version = "0.5.1"
edition = "2021"
authors = ["word-sys"]
description = "A comprehensive system monitoring and editing tool with TUI"
license = "GPL-3.0"
repository = "https://github.com/word-sys/puls"

[[bin]]
name = "puls"
path = "src/main.rs"

[dependencies]
sysinfo = "0.31"  
users = "0.11"

bollard = { version = "0.17", optional = true }

nvml-wrapper = { version = "0.10", optional = true }
# AMD GPU support (placeholder for future implementation)
# libdrm-sys = { version = "0.4", optional = true }

ratatui = "0.26"
crossterm = "0.28"

tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

dashmap = "6.0"
parking_lot = "0.12"

atty = "0.2"
env_logger = "0.11"
log = "0.4"
signal-hook = "0.3"

[features]
default = ["docker", "nvidia-gpu"]
docker = ["dep:bollard"]
nvidia-gpu = ["dep:nvml-wrapper"]
amd-gpu = []
full = ["docker", "nvidia-gpu"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
