[package]
name = "puls"
version = "0.6.1"
edition = "2021"
authors = ["word-sys"]
description = "A unified system monitoring and management tool for Linux"
license = "GPL-3.0"
repository = "https://github.com/word-sys/puls"

[[bin]]
name = "puls"
path = "src/main.rs"

[dependencies]
sysinfo = "0.33"  
users = "0.11"

bollard = { version = "0.18", optional = true }

ratatui = "0.26"
crossterm = "0.28"

tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

dashmap = "6.0"
parking_lot = "0.12"

atty = "0.2"
env_logger = "0.11"
log = "0.4"
signal-hook = "0.3"

[features]
default = ["docker"]
docker = ["dep:bollard"]
full = ["docker"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.deb]
maintainer = "word-sys <baringuzeldemir@gmail.com>"
copyright = "2026, word-sys"
depends = "$auto" 
section = "utils"
priority = "optional"
assets = [
    ["target/release/puls", "usr/bin/", "755"],
]

